Finish download function.
