# openapi.yaml
@@ -71,6 +71,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/backend.v1.UserReply'
+    /download/{fileID}:
+        post:
+            tags:
+                - Backend
+            operationId: Backend_DownloadFile
+            parameters:
+                - name: fileID
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/backend.v1.DownloadFileRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/backend.v1.DownloadFileReply'
     /v1/file/{fileID}:
         delete:
             tags:
@@ -112,6 +136,14 @@ components:
         backend.v1.DeleteFileReply:
             type: object
             properties: {}
+        backend.v1.DownloadFileReply:
+            type: object
+            properties: {}
+        backend.v1.DownloadFileRequest:
+            type: object
+            properties:
+                fileID:
+                    type: string
         backend.v1.File:
             type: object
             properties:
